fixed overflowing text

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -81,4 +81,15 @@ code {
 
 .table-text-container {
   vertical-align: middle;
+  width: 50px;
+}
+
+
+table {
+  table-layout: fixed;
+  word-wrap: break-word;
+}
+
+.modal-body{
+  word-break: break-all;
 }
